--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-select": "^5.10.0",
+    "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
