--- a/package.json
+++ b/package.json
@@ -11,28 +11,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.6",
-    "@mui/material": "^5.16.6",
-    "@mui/x-data-grid": "^7.12.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/quill": "^2.0.14",
     "apexcharts": "^3.51.0",
     "firebase": "^11.0.1",
     "framer-motion": "^11.3.2",
-    "lodash": "^4.17.21",
-    "moment": "^2.30.1",
-    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
-    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.3.0",
-    "react-pro-sidebar": "^1.1.0",
-    "react-progressbar": "^1.2.0",
-    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-select": "^5.10.0",
