--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/quill": "^2.0.14",
-    "apexcharts": "^3.51.0",
+    "chart.js": "^4.4.7",
     "firebase": "^11.0.1",
     "framer-motion": "^11.3.2",
+    "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.4.1",
+    "react-big-calendar": "^1.17.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.3.0",
@@ -36,6 +39,7 @@
     "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.14",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -44,7 +48,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "eslint": "^8.57.0",
@@ -56,6 +60,6 @@
     "postcss": "^8.4.45",
     "rollup": "^4.26.0",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.3.1"
+    "vite": "^6.1.0"
   }
 }
